--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,12 @@
 html , body{
 	font-family: 'Roboto', sans-serif;
+	color: #000;
 }
 
 a{
-	color: #fff;
+	
 	text-decoration: none;
+	color: #000;
 }
 
 h1,h2,h3{
@@ -21,6 +23,7 @@ h2{
 .container{
 	background: url('../img/bg2.jpg');
 	background-size: cover;
+	background-attachment: fixed;
 	text-align: center;
 	height: 100vh;
 	width: 100%;
@@ -91,6 +94,17 @@ h2{
 	background: rgba(46, 204, 113,0.5);
 }
 
+.about-me:hover, .contact:hover, .skill:hover, .resume:hover, .portfolio:hover, .clients:hover {
+	background: rgba(0,0,0,0.7);
+	color: #ecf0f1;
+	transition: all 0.6s;
+}
+
+.about-me:hover .about-me-container, .contact:hover .contact-container, .skill:hover .skillset-container, .resume:hover .resume-container, .portfolio:hover .portfolio-container, .clients:hover .clients-container{
+	color: #ecf0f1;
+}
+
+
 .user{
 	background: rgba(0, 0, 0,0.6);
 	color: #ffffff;
@@ -104,6 +118,10 @@ h2{
 .user h1 span{
 	color: #f39c12;
 	font-size: 50px;
+}
+
+.social-icon a{
+	color: #ffffff;
 }
 
 .social-icon i{
