--- a/css/style.css
+++ b/css/style.css
@@ -275,47 +275,96 @@ h2{
 .portfolio-details h1{
 	text-shadow: 0px 0px 15px #ecf0f1;
 }
-.filter-nav{
-	margin: 15px 0px;
-}
-.filter-nav ul{
-	list-style-type: none;
-	display: inline-block;
-	margin: 0px;
-	padding: 0px;
-	background: #2ecc71;
-	border-radius:3px;
 
-
-}
-.filter-nav ul li{
-	display: inline-block;
-	padding: 5px 10px;
-	font-size:25px;
-
-}
-.filterize{
-	width: 1140px;
-	text-align: center;
+.shuffle-container{
+	width: 1200px;
+	background: rgba(236, 240, 241,0.3);
 	margin: 0px auto;
+	text-align: center;
+	padding: 15px;
+}
+.filter-nav {
+	list-style: none;
+	margin: 10px auto;
+	display: inline-block;
+	padding: 0px;
+	
+	width: 298px;
+	border-radius: 5px;
+}
+.filter-nav li{
+	display: inline-block;
+	margin: 9px auto;
+}
+.filter-nav li a{
+	padding: 10px;
+	padding-top: 11px;
+	border-radius: 2px;
+}
+.filter-nav li:hover a{
+	background: rgba(255,255,255,0.8);
+}
+#filter  a.active {background: rgba(255,255,255,0.8);}
+
+#grid {clear: both; position: relative}
+.grid-item{
+	width: 88%;
+	margin: 0px auto;
+	text-align: center;
+}
+.item{
+	width: 22%;
+	
+	
+	/*height: 175px;*/
+	margin: 10px ;
+	float: left;
+	overflow: hidden;
+	
+	
+}
+.item img{
+	transform: scale(1);
+	transition: all 1s linear;
+}
+.item:hover img{
+	transform: scale(1.2);
+	
+}
+.item span{
+	position: absolute;
+	top: 0%;
+	left: 50%;
+	transform: translate(-50%) scale(0);
+	display: none;
+	background: rgba(230, 126, 34,0.30);
+	width: 100%;
+	height: 100%;
+	line-height: 175px;
+	transition: all 1s linear;
 
 }
-.fill-width{
-	height: 183px;
-	width: 275px;
-	float: left;
-	background: #000;
-	margin: 5px;
-	overflow: hidden;
+.item:hover span{
+	display: block;
+	transform: translate(-50%) scale(1);
+	transition: all  1s linear ;
+
 }
-.fill-width img{
-	
-	transition: all 3s;
+.item span a{
+	padding: 100px;
 }
-.fill-width:hover img{
-	transform: scale(1.3);
-	
-}
+
+
+
+
+
+
+
+
+
+
+
+
 
 /*====  Resume */
 .resume-container-bg{
@@ -415,7 +464,7 @@ input, textarea,button{
 	margin: 5px auto;
 	padding: 5px;
 	border: 5px solid rgba(39, 174, 96,1.0);
-	width: 100%;
+	/*width: 100%;*/
 	background: rgba(52, 73, 94,0.3);
 	color: #ecf0f1;
 }
